--- a/psrdada_cpp/CMakeLists.txt
+++ b/psrdada_cpp/CMakeLists.txt
@@ -87,6 +87,6 @@ install (TARGETS ${CMAKE_PROJECT_NAME}
 install(FILES ${psrdada_cpp_inc} DESTINATION include/psrdada_cpp)
 
 add_subdirectory(meerkat)
-
+add_subdirectory(effelsberg)
 add_subdirectory(test)
 
